[package]
name = "rust-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.50", features = ["derive"]}
colored = "3.0.0"
chrono = "0.4"
tokio = { version = "1.41", features = ["full"] }
mdns-sd = "0.11"
chacha20poly1305 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"
blake3 = "1.5"
hex = "0.4"
